# multiway-graphs

./: .gitignore  README.md  sample.py
rust-hypergraph/: Cargo.toml
rust-hypergraph/src/: main.rs
rust-python-integration/: Cargo.toml  build.rs  requirements.txt  sample.py
rust-python-integration/py_script/: dual_hypergraph.py  hypergraph.py  layered_hypergraph.py  main.py  sample.py
rust-python-integration/py_script/json-data/: test_edge.json  test_hypergraphs.json
rust-python-integration/src/: main.rs
